--- a/rps.css
+++ b/rps.css
@@ -1,3 +1,35 @@
 body {
-    background-color: red;
+    background-image: url("./img/background.jpg");
+}
+
+h1 {
+    color: blue;
+    font-size: 48px;
+    text-align: center;
+}
+
+.guide {
+    display: block;
+    margin:0 auto 80px;
+}
+
+.imgbutton {
+    width: 130px;
+}
+
+button {
+    height: 145px;
+    width: 145px;
+    border-radius: 50%;
+    border: 5px solid purple;
+    padding: 0;
+}
+
+button:hover {
+    border: none;
+}
+
+.choices {
+    display: flex;
+    justify-content: space-around;
 }
